--- a/android-toolbar-2/app/src/main/res/layout/activity_main.xml
+++ b/android-toolbar-2/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,7 @@
                     android:layout_height="?attr/actionBarSize"
                     android:layout_width="match_parent"
                     android:minHeight="?attr/actionBarSize"
-                    app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+                    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                     app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
 
                 </android.support.v7.widget.Toolbar>
