--- a/android-botones/app/src/main/res/layout/activity_main.xml
+++ b/android-botones/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -84,15 +84,15 @@
 
     </LinearLayout>
 
-    <com.getbase.floatingactionbutton.AddFloatingActionButton
-        android:id="@+id/semi_transparent"
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        fab:fab_plusIconColor="#FFFFFF"
-        fab:fab_colorNormal="#FF0000"
-        fab:fab_colorPressed="#990000"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/BarraBtnSinBorde" />
+        android:layout_below="@id/BarraBtnSinBorde"
+        android:layout_marginLeft="16dp"
+        android:src="@drawable/ic_add"
+        app:fabSize="normal"
+        app:borderWidth="0dp" />
 
     <LinearLayout
         android:id="@+id/BarraBotones"
