--- a/android-toolbar-3/app/src/main/res/layout/activity_main.xml
+++ b/android-toolbar-3/app/src/main/res/layout/activity_main.xml
@@ -6,15 +6,21 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <include layout="@layout/toolbar"
-        android:id="@+id/appbar" />
-
-    <net.sgoliver.android.toolbar3.SlidingTabLayout
-        android:id="@+id/slidingtabs"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbarlayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/color_primary"
-        android:elevation="4dp" />
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >
+
+        <include layout="@layout/toolbar"
+            android:id="@+id/appbar" />
+
+        <android.support.design.widget.TabLayout
+            android:id="@+id/appbartabs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </android.support.design.widget.AppBarLayout>
 
     <FrameLayout
         android:layout_width="wrap_content"
@@ -24,7 +30,7 @@
         <android.support.v4.view.ViewPager
             android:id="@+id/viewpager"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="@android:color/white" />
 
     </FrameLayout>
