--- a/android-bottom-sheets/app/src/main/res/layout/contenido_main.xml
+++ b/android-bottom-sheets/app/src/main/res/layout/contenido_main.xml
@@ -28,4 +28,10 @@
         android:layout_height="wrap_content"
         android:text="Ocultar Bottom Sheet" />
 
+    <Button
+        android:id="@+id/btnModalBottomSheet"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Modal Bottom Sheet" />
+
 </LinearLayout>
