Hola Usuario (AS 2.0)
Adaptación del código a Android Studio 2.0

--- a/android-hola-usuario/app/src/main/res/layout/activity_main.xml
+++ b/android-hola-usuario/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,21 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/LytContenedor"
+    android:id="@+id/lytContenedor"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <TextView android:id="@+id/LblNombre"
+    <TextView android:id="@+id/lblNombre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/nombre" />
 
-    <EditText android:id="@+id/TxtNombre"
+    <EditText android:id="@+id/txtNombre"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="text" />
 
-    <Button android:id="@+id/BtnAceptar"
+    <Button android:id="@+id/btnAceptar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/aceptar" />
