--- a/android-hola-usuario/app/src/main/res/layout/activity_saludo.xml
+++ b/android-hola-usuario/app/src/main/res/layout/activity_saludo.xml
@@ -1,10 +1,11 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/LytContenedorSaludo"
+    android:id="@+id/lytContenedorSaludo"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <TextView android:id="@+id/TxtSaludo"
+    <TextView android:id="@+id/txtSaludo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="" />
